test_programs/compile_failure/noirc_frontend_tests_traits_trait_alias_with_where_clause_has_equivalent_errors_2/src/main.nr

        trait Bar {
            fn bar(self) -> Self;
        }

        trait Baz {
            fn baz(self) -> bool;
        }

        trait Qux<T> = Bar where T: Baz;

        pub fn qux<T, U>(x: T, _: U) -> bool where U: Qux<T> {
            x.baz()
        }

        fn main() {}
    